samples/_failures_safe/1761615110_3a6377_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0846b91a.c: In function ‘main’:
./samples/SAFE/__tmp_0846b91a.c:156:9: error: expected expression at end of input
  156 |         for (int j =
      |         ^~~
./samples/SAFE/__tmp_0846b91a.c:156:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0846b91a.c:156:9: error: expected declaration or statement at end of input
